@@ -27,6 +27,7 @@
 * Fix bug in Serial Port Manager that added a new high priority thread every time the serial ports were refreshed
 * Improve error handling for rejected task executions to ensure they cannot kill the main timer thread
 * Add web.forwardedHeaders.* settings to env.properties, enables configuring Mango to honor Forwarded and X-Forwarded-* headers for operation behind a proxy server
+* Remove InputStream EPoll task from high priority executor make it a Thread as it is always running and would otherwise just take up a thread in the pool
 
 *Version 3.6.4*
 * Revert data source management permission to only allow creating new data sources, not give access to all data sources
